--- a/helm/secret.enc.yaml
+++ b/helm/secret.enc.yaml
@@ -1,44 +1,48 @@
 image:
-    repository: ENC[AES256_GCM,data:l7oqCmn4lPyolX6OTWeKNyU9mbFkHQ==,iv:cOfs4qvUD5jcSEACiN54MrSuqlotNv/A+oExH+HXUjU=,tag:RLFSa4ezFRuEkv+srJJ8VQ==,type:str]
+    repository: ENC[AES256_GCM,data:7iE1roZje4fA+lHJyiebLigSe2izxQ==,iv:6mmJeGnlfAxgM6nwKu4LfsCsQLYeXwbbd4KX54nnsSo=,tag:PfVtJ+jIbB0jaJDc2XqneQ==,type:str]
 secret:
-    enabled: ENC[AES256_GCM,data:tGcRCw==,iv:tdk4nnPhXDJ5lHkviJjxbzoVWOCjs9PCKX9ducA+c7s=,tag:3OogOt+KsnZGGCKfffnwiA==,type:bool]
-    name: ENC[AES256_GCM,data:/Ee9r4Tl,iv:Z711X+X4Ej9PMEH9udL+SB/gAUfqD3nL1IGgHvq7pEg=,tag:SCUylrAtk4qBPMy8XMaa1Q==,type:str]
+    enabled: ENC[AES256_GCM,data:NTnIvQ==,iv:UyCvPtz1CLKYEojFXs1GD+hPSZk/Y9ba1r3YuZD/m4k=,tag:JqpjrUX3kNfUuccOIYohbw==,type:bool]
+    name: ENC[AES256_GCM,data:3Qmwe/SC,iv:CLynxEmBfuOgQO//QnSRT9ImcqeGq/tnOWT/N6qJdvM=,tag:JnFHJXPMx0jcYYSzHnKYVg==,type:str]
     data:
-        WAKAPI_PASSWORD_SALT: ENC[AES256_GCM,data:DSEqkcclrwKdwkzSeXFQ1x+er4V51TM4UW0XaEYwqVo=,iv:f6QOvKuJlZ5ax0pc42ZcdM1e89QxsxGrMf6Rq0Vz0HU=,tag:4L+eH8Tsq3UEtx04jLNf5g==,type:str]
+        WAKAPI_PASSWORD_SALT: ENC[AES256_GCM,data:hdeyjjRVb92hxdurLDt++5G1WF0CE9/DU8sUUIy8b4w=,iv:4ILHGhzOJ6r83DdWWDstV0U9xxJPS85knJ8dWfbrRAc=,tag:lqw/Efhk2dEMsvHV/yJFKA==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:IQKx+w==,iv:Q8uZT21bhk2h1H6RscU8x7RMf4sPZ4MvonUJz+gSayk=,tag:OZnQirykKtxCb9Viq0U3CQ==,type:bool]
-    className: ENC[AES256_GCM,data:/99fcjY=,iv:DpJkj1SKDkaHKZ2OJUJG27VibvrArNPb4/QZeAGY6l0=,tag:yB3QhLUz5wg52ESGSMAaVw==,type:str]
+    enabled: ENC[AES256_GCM,data:YaXwwg==,iv:gJtaKqqDoNQvWCqozKdA8axG+0GORHtm6PuHn/AlzB4=,tag:JELHFDSbikqIRSfE4xhO8g==,type:bool]
+    className: ENC[AES256_GCM,data:0txPdTQ=,iv:bFz4F5r9XBFn9BXnIjNmYb0EB6248c/0133D+p0KP8o=,tag:VoFCEWO0L0mWgIq0IG6f9Q==,type:str]
     annotations:
-        cert-manager.io/cluster-issuer: ENC[AES256_GCM,data:Daev4+hbOqKCDVdo,iv:4O+5WQQ6CsxjxLRUCC3+huIEBlBf7e1Y1mVRuWbFoQo=,tag:DdJtITvFrHlVGh+OaH8NLQ==,type:str]
+        cert-manager.io/cluster-issuer: ENC[AES256_GCM,data:VQdHG6VYbZK32dgY,iv:vqIILlmaaLPMZBD3PDqXxBoJKanB687Qfd9GA77Glv4=,tag:5gYUwZO/5kHd1dK/Kvzcyg==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:5Pf0n2IxISeFc79XebJGX5hf,iv:ySnn2MlMo5rm3pw6qxVVW+LPB00NFN1A3WO0dmIrg9k=,tag:qMGV4rI1NVymT1XcZRhTww==,type:str]
+        - host: ENC[AES256_GCM,data:G4MzdUaxTRRM7cPp9XcHuM9g,iv:jf6uUnh64PSB363QBVl73ab8+U85LSHhwDKWRQIdHY8=,tag:nA2JqbsCxRTvHrefXu0WXQ==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:nw==,iv:3D453ARfo1bma3i/NHLJeeObS5sMco73OOpwyfiPt+I=,tag:/+hw8Ez3XOOPzJC68r8E8Q==,type:str]
-              pathType: ENC[AES256_GCM,data:YLN6MyfCFW1TiAf5y1icdhsp1CFPcg==,iv:3K3l5qHVdF7WREeFiYd2rGqOcM27HcgyX0g8vTO1yzo=,tag:ZnOBXLLnzxTk/rJuYOeo7w==,type:str]
+            - path: ENC[AES256_GCM,data:vQ==,iv:/arRhotDnU/VvZbvICls7Rab12XOJ8Rtr+n9XnYSxN4=,tag:Aw4KrBRSMelyYkRukAoR4A==,type:str]
+              pathType: ENC[AES256_GCM,data:UrXTah4Tar8vCzyBXi5tm+QbN4YUXw==,iv:6f/wO2wFqQbx7NJ14AKuHfZKkzs5oWDE2QJCnUsnNq0=,tag:8Vmal0HZhvGslPZZLjG5hg==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:UUxcQ8FY4613KdRsGrzWuh7pqZwCrTNkmrMCXC1R2MYYYpXZAsyt7w==,iv:1iK18NGlbo+Gd56pFaSPmZi+R8GkLi7Rb+L316Zt/3M=,tag:CbFTaD4AkDoKfTZGr8g2PA==,type:comment]
-            - ENC[AES256_GCM,data:UL+dp93QwCOPxVovZzo9DpVQ,iv:TleyFYW+Nw5pCO+15xH5I9bB5jHmWgf0qgB1QepPS6w=,tag:Um81rjGWApNXgDMD80aCXw==,type:str]
-          secretName: ENC[AES256_GCM,data:sgfEYB74FVFGg9GYsXQGz2VUc+z9BQ==,iv:UObM1QZLeUx/9FR/xPBbdSd8WC3fXg1SehxAkMqHMcU=,tag:WiSQsxZEcnxvZrIG9UzPlw==,type:str]
+            - ENC[AES256_GCM,data:38Q1yi2wxZpiNUm1cj6Uh2f/mA9IfIoma3jXsvmb+GkMgubYdchv3w==,iv:UIh48YqwUlfYWRSXMAznR1nwUFJ1Ew4smnkA0QcZVro=,tag:CIRyddv/JMdIqDLmokQXEw==,type:comment]
+            - ENC[AES256_GCM,data:lpEZ5Cgk5hAFzSWcwaVBY1mM,iv:8wKtgUloOtmyhoDcH+oS8h8CkrnPZ+od3iD+ruZO9r4=,tag:q0Bx7SIEpYmBcjnDF9UUDA==,type:str]
+          secretName: ENC[AES256_GCM,data:zwimJ1lTudT1wSoI9P0AsIUYRuKG+Q==,iv:sEGBnP1J3Mjd0fTEvijRquh5k5kiucNiPnVgzi5EBV0=,tag:hNVsL6Z41YAkREOn9ObqVA==,type:str]
+exporter:
+    wakapi:
+        #ENC[AES256_GCM,data:WX2MePvulpclSgOs0NB6hsUIvD5h3FYS4ekEq60hPI2a7CVCD52hmgbDSurAH126zv/rH0VA7sYknn1z9sJv,iv:ZXpspQs16aaxmEnM/TSs3YflTI0AcwCxXbPMj4iwF4k=,tag:vVtiSkq6DhJzMkVODAgOtA==,type:comment]
+        token: ENC[AES256_GCM,data:0S6bZL3RcwhsoAeGIlX8C0II6RzN/Sieggu2xgfX7U1XXvOD,iv:M0egirK0iFC2JH/yLRebf4jJpJN2ZvKEFNAsht6L+UU=,tag:p0NA+AUr6ETaIg2Adecmtw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-09-14T16:44:12Z"
-    mac: ENC[AES256_GCM,data:y4X0m8a3fVep86xWqNcGqxjpbELoPCCqoQcoC8lP6SyejPpzwur4hG7zLELtVtyJbZtq4SbiO4vgHHmzPdBG8IWtQZUSQ+sfcvyeLseKqs9Zec4ZFGVZuCttulr7CE6uKbdTJIWMxJFm8FCcDnp6OiEk1yGLI66n0iYLHhQCQn8=,iv:sWRTvl+qIhqBg/19UTOo+j61DhbakhTXAg7MFHK69eE=,tag:RFeDklH5MyA8IqbV6gZFog==,type:str]
+    lastmodified: "2024-09-14T19:27:44Z"
+    mac: ENC[AES256_GCM,data:ZWZOnCo9W6W6LmzQ+dQpoidFZmOS5sGHdHyerYKAq9vVKlDoNf3YUFeDvFFxVYM6cDOnV91zRytMo+Dcc2TwprkJrd4mGYlwieP9lVb0nJk7tKF1C0kijKRRejaEepoCqP/QnT99eklFOElAFliCrYej8myjEyNrqLB3TCHQbl8=,iv:osmcU0MijNEwbbsvD9WISHTlCBfGAo+t9sTeYIgIQVQ=,tag:Y8KQriPh5v+9iTMDaU2PZA==,type:str]
     pgp:
-        - created_at: "2024-09-14T16:44:12Z"
+        - created_at: "2024-09-14T19:27:44Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hF4DsnNQZ3UzqQcSAQdAcv6vQJJxdlAd6DCX/pBI+2ktglz3q5EkTS0JGUaA5Qcw
-            F5hFGyYbnWAAC8OsCDR0HCf1p1wsG2tt3vJilQhkqrLtQ+bBbxrDmwLC3+hcW7PC
-            1GYBCQIQLRb41zh+Med6u7GhhvQnQEkwlNwf+8Mv2FpISSrza/3pTP5xCi+EwYJC
-            UnKHR3QP2wXp0WSiB8K4p+FPpHlbO4Wy6weiCslnuGJr+Y5KO54AtorUI5welf+R
-            aevhBsBB1xM=
-            =WOvR
+            hF4DsnNQZ3UzqQcSAQdAgOifQEfD9DkO/3dJWEuDPCyaT9kF+z+kn1ydsA9oVC4w
+            62dOlXiAIRUlVnLzd1ArYqG9HszPXNguK6tl9W2TXd3M6Wt/XUfbGxtKlDf5gDSa
+            1GgBCQIQxGUT/pLS75aIzcRkcb4H3rVCYYAyVWewhIvkznl60CjllOZFxUvNkIAf
+            RnYUDvvSXlfHtpDcEBZFOyh9k/3+9cGNq7Vu2YNV1gBk6jTDllTr7KketNCcqJk6
+            cX3pCxEccsID9g==
+            =XVBB
             -----END PGP MESSAGE-----
           fp: 27D207A8D450CBA4CE9BD75552F3A995CBB43450
     unencrypted_suffix: _unencrypted
