--- a/helm/secret.enc.yaml
+++ b/helm/secret.enc.yaml
@@ -1,48 +1,45 @@
 image:
-    repository: ENC[AES256_GCM,data:7iE1roZje4fA+lHJyiebLigSe2izxQ==,iv:6mmJeGnlfAxgM6nwKu4LfsCsQLYeXwbbd4KX54nnsSo=,tag:PfVtJ+jIbB0jaJDc2XqneQ==,type:str]
+    repository: ENC[AES256_GCM,data:WU7f6mwE4HTCEg1rTNMyO3fnTgY73A==,iv:+haCuA45W20pI5dfzYke8PZnpLrb0bZeNYe+udVI/kE=,tag:5sZC9R7hAw7mfAgGX0cLBQ==,type:str]
 secret:
-    enabled: ENC[AES256_GCM,data:NTnIvQ==,iv:UyCvPtz1CLKYEojFXs1GD+hPSZk/Y9ba1r3YuZD/m4k=,tag:JqpjrUX3kNfUuccOIYohbw==,type:bool]
-    name: ENC[AES256_GCM,data:3Qmwe/SC,iv:CLynxEmBfuOgQO//QnSRT9ImcqeGq/tnOWT/N6qJdvM=,tag:JnFHJXPMx0jcYYSzHnKYVg==,type:str]
+    enabled: ENC[AES256_GCM,data:M2OvrA==,iv:SUyinS/YqEPSvUCWo6q+dkB1uWrpQEUw8uvNOOm/5w0=,tag:4rtFszm11sAiIy9K6k9sqQ==,type:bool]
+    name: ENC[AES256_GCM,data:F1wqFVlg,iv:fQEGk91JC1JMDBPj2JXpxGXyxK2yJzpsj9RPmwz7BAU=,tag:M33yXFWAwj80me6idBCiPA==,type:str]
     data:
-        WAKAPI_PASSWORD_SALT: ENC[AES256_GCM,data:hdeyjjRVb92hxdurLDt++5G1WF0CE9/DU8sUUIy8b4w=,iv:4ILHGhzOJ6r83DdWWDstV0U9xxJPS85knJ8dWfbrRAc=,tag:lqw/Efhk2dEMsvHV/yJFKA==,type:str]
+        WAKAPI_PASSWORD_SALT: ENC[AES256_GCM,data:JJqG9Gq0dCCyafsPAMRj74aVTtT3g1Y6ZHznR7wqzvg=,iv:y0BiRoNeqzCtUHGB9ahl7uePZs6QSFW5f4SmRXKbBcY=,tag:rq/XtuDiZ9QcihWJIzyPFQ==,type:str]
+        POSTGRES_PASSWORD: ENC[AES256_GCM,data:ti+3d4FDMFsy2OuEjUSSBI6p,iv:PhgUadY+GQaBlW8fbV5OVfY+9uPfKCkvnpfnB447HL0=,tag:Q/0xjpcFYQo4UWahe8qu5g==,type:str]
+        WAKAPI_DB_DSN: ENC[AES256_GCM,data:GNQkpFzKRsJc8whRtEv62PzIiosPdxuOKtNeh16vxN3XM/H2PQDClkOVl9ba/IaCZ06oik6mpdfxs91F4BIONJOQ7+dGorTQlnT1wKu1WImMUQ4B1Oc7wO1Zd7U58B8=,iv:miJdIp1cQyRs2gAslXEmkOU4T2bTRPpqNBcyptgTUqc=,tag:OeE8XI2D+cXls9tjc4adwA==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:YaXwwg==,iv:gJtaKqqDoNQvWCqozKdA8axG+0GORHtm6PuHn/AlzB4=,tag:JELHFDSbikqIRSfE4xhO8g==,type:bool]
-    className: ENC[AES256_GCM,data:0txPdTQ=,iv:bFz4F5r9XBFn9BXnIjNmYb0EB6248c/0133D+p0KP8o=,tag:VoFCEWO0L0mWgIq0IG6f9Q==,type:str]
+    enabled: ENC[AES256_GCM,data:IvUBsA==,iv:2SqQLbNp6HeD2tRfejmE1Nn2XLQz3MdUdP902X3PdMU=,tag:ejIajBZqeGqJ/yjnMfHRSg==,type:bool]
+    className: ENC[AES256_GCM,data:mIcWqCE=,iv:xq7n1uhmPeQKiWrpcGx+faVLJSfDEwVRKGu2s4WXCIM=,tag:+uv6KxPXnSziLrCiJmp96g==,type:str]
     annotations:
-        cert-manager.io/cluster-issuer: ENC[AES256_GCM,data:VQdHG6VYbZK32dgY,iv:vqIILlmaaLPMZBD3PDqXxBoJKanB687Qfd9GA77Glv4=,tag:5gYUwZO/5kHd1dK/Kvzcyg==,type:str]
+        cert-manager.io/cluster-issuer: ENC[AES256_GCM,data:M2ILdCfyVVMsCwsO,iv:kxRLU3E9U3di0Atb+stcwXN5ab1bBaTAiVIAhXl7xrU=,tag:eu5s3LiVb9QW1K8jchhQjA==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:G4MzdUaxTRRM7cPp9XcHuM9g,iv:jf6uUnh64PSB363QBVl73ab8+U85LSHhwDKWRQIdHY8=,tag:nA2JqbsCxRTvHrefXu0WXQ==,type:str]
+        - host: ENC[AES256_GCM,data:p9R2JNerYZAv0YJeD33ItCXb,iv:5aApQEQnWxFL9RU6pzF/RMdlh4wRhXdgSSJ0NPybiQw=,tag:tsevEYOkB6EVN1fJqSHGsw==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:vQ==,iv:/arRhotDnU/VvZbvICls7Rab12XOJ8Rtr+n9XnYSxN4=,tag:Aw4KrBRSMelyYkRukAoR4A==,type:str]
-              pathType: ENC[AES256_GCM,data:UrXTah4Tar8vCzyBXi5tm+QbN4YUXw==,iv:6f/wO2wFqQbx7NJ14AKuHfZKkzs5oWDE2QJCnUsnNq0=,tag:8Vmal0HZhvGslPZZLjG5hg==,type:str]
+            - path: ENC[AES256_GCM,data:Ww==,iv:+SptLwL5eqQd7RsmPC/Ta3mO/0eaCW3NUUoFhjSeuGk=,tag:JAcKcjIzM5mFw2FU2OYaeQ==,type:str]
+              pathType: ENC[AES256_GCM,data:Nu6Fjd1KvfrHPt9v6GKYw2c2F0F+hA==,iv:ZtdUHvf+QxxUm9xhuWos/mgMAuoP2n5dDXFSlhgcAuw=,tag:urVorroao35VucBKHna+Gg==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:38Q1yi2wxZpiNUm1cj6Uh2f/mA9IfIoma3jXsvmb+GkMgubYdchv3w==,iv:UIh48YqwUlfYWRSXMAznR1nwUFJ1Ew4smnkA0QcZVro=,tag:CIRyddv/JMdIqDLmokQXEw==,type:comment]
-            - ENC[AES256_GCM,data:lpEZ5Cgk5hAFzSWcwaVBY1mM,iv:8wKtgUloOtmyhoDcH+oS8h8CkrnPZ+od3iD+ruZO9r4=,tag:q0Bx7SIEpYmBcjnDF9UUDA==,type:str]
-          secretName: ENC[AES256_GCM,data:zwimJ1lTudT1wSoI9P0AsIUYRuKG+Q==,iv:sEGBnP1J3Mjd0fTEvijRquh5k5kiucNiPnVgzi5EBV0=,tag:hNVsL6Z41YAkREOn9ObqVA==,type:str]
-exporter:
-    wakapi:
-        #ENC[AES256_GCM,data:WX2MePvulpclSgOs0NB6hsUIvD5h3FYS4ekEq60hPI2a7CVCD52hmgbDSurAH126zv/rH0VA7sYknn1z9sJv,iv:ZXpspQs16aaxmEnM/TSs3YflTI0AcwCxXbPMj4iwF4k=,tag:vVtiSkq6DhJzMkVODAgOtA==,type:comment]
-        token: ENC[AES256_GCM,data:0S6bZL3RcwhsoAeGIlX8C0II6RzN/Sieggu2xgfX7U1XXvOD,iv:M0egirK0iFC2JH/yLRebf4jJpJN2ZvKEFNAsht6L+UU=,tag:p0NA+AUr6ETaIg2Adecmtw==,type:str]
+            - ENC[AES256_GCM,data:iWimZzadxvXilxkb9mK0AlR2OUUM6xpGNaPMPRtzbEVOdJoWJTXRlw==,iv:TR1O4Es1MIOBxNrSCNaFdNRLSg5q95hTYGVApSMEIJg=,tag:8KDribpLiDbj3pJM70Ouyw==,type:comment]
+            - ENC[AES256_GCM,data:iT73G+252nWCoun0s0TCCwNY,iv:ejpVttdDhy9tZ13v4d7n5xxmnRcc9iuOxordEeI2dr0=,tag:4hG0T3xR0bzODgCLb3m16Q==,type:str]
+          secretName: ENC[AES256_GCM,data:sGU6RPEIIvIQk2BEsn+yvdycmFUeFg==,iv:86/H0c7INaDM1GTYKha+C/PmJ/zR+75VhKcSdq2W3YM=,tag:Fqbr1+Mcn7j11DsFTGSsEQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-09-14T19:27:44Z"
-    mac: ENC[AES256_GCM,data:ZWZOnCo9W6W6LmzQ+dQpoidFZmOS5sGHdHyerYKAq9vVKlDoNf3YUFeDvFFxVYM6cDOnV91zRytMo+Dcc2TwprkJrd4mGYlwieP9lVb0nJk7tKF1C0kijKRRejaEepoCqP/QnT99eklFOElAFliCrYej8myjEyNrqLB3TCHQbl8=,iv:osmcU0MijNEwbbsvD9WISHTlCBfGAo+t9sTeYIgIQVQ=,tag:Y8KQriPh5v+9iTMDaU2PZA==,type:str]
+    lastmodified: "2024-09-16T18:25:18Z"
+    mac: ENC[AES256_GCM,data:jVdEbQK15fEZX91ws3N8q6PAc/nmUDL6dRGxol7ThiHzD6x6SdhxpUu21on06NTWI+qFRIwKZhiL0p4jruv9wjb7b+q5ZSf7Zo4deykyYXG7c9gDWTV225SQSQg1LQ33VE760h5dDNuJc8ARbcaWpej6LHjcpqEK6HnwqxXS5gQ=,iv:DM1J+ZEy93UOmIQvVrG4yiB/BT4slKxtdMju0YzPTFk=,tag:kqrQObMBwuy0IuTcsjz31A==,type:str]
     pgp:
-        - created_at: "2024-09-14T19:27:44Z"
+        - created_at: "2024-09-16T18:25:18Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hF4DsnNQZ3UzqQcSAQdAgOifQEfD9DkO/3dJWEuDPCyaT9kF+z+kn1ydsA9oVC4w
-            62dOlXiAIRUlVnLzd1ArYqG9HszPXNguK6tl9W2TXd3M6Wt/XUfbGxtKlDf5gDSa
-            1GgBCQIQxGUT/pLS75aIzcRkcb4H3rVCYYAyVWewhIvkznl60CjllOZFxUvNkIAf
-            RnYUDvvSXlfHtpDcEBZFOyh9k/3+9cGNq7Vu2YNV1gBk6jTDllTr7KketNCcqJk6
-            cX3pCxEccsID9g==
-            =XVBB
+            hF4DsnNQZ3UzqQcSAQdAPaJglxRV5hFIXxDNRsEuedDXu5ndY4IOGOW148e7Nyow
+            edd4dwpMeqBSNqc4QDR74Ges+hu4FzW7bg+S5Z2iC275QVZPESuuccgXPO/gDk2g
+            1FsBCQIQxLSXu0V9RqFZsUkniwLOgJ2W+8zRo2iMBudQgdtBNyg2R8MZbJntHT+O
+            J1LEHg/U2Gb2FjLp3OiGHbKfhKDubjcADVOPzqmYbFUOgGO+6vqvrRRQiIP0
+            =mypT
             -----END PGP MESSAGE-----
           fp: 27D207A8D450CBA4CE9BD75552F3A995CBB43450
     unencrypted_suffix: _unencrypted
